Closed Bug 800657 Opened 13 years ago Closed 13 years ago

Reenable WebGL index-validation.html test

Categories

(Core :: Graphics: CanvasWebGL, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla19

People

(Reporter: bjacob, Assigned: bjacob)

Details

Attachments

(1 file)

It was disabled by b3c814e2d015. It's not too bad, only the large-negative-value test is failing on 32bit machines. Regressed either in bug 732660 or with the porting to new bindings.
This was regressed by: changeset: 109965:4c134de65570 user: Benoit Jacob <bjacob@mozilla.com> date: Thu Oct 11 14:23:34 2012 -0400 summary: Bug 779611 - WebGL extensions should be [NoInterfaceObject] as their compliant IDL interface names would pollute the global object - r=bz
Erm, no, rather by changeset: 109966:78c16f313547 user: Benoit Jacob <bjacob@mozilla.com> date: Thu Oct 11 15:23:03 2012 -0400 summary: Bug 779611 - part 12: remove old-bindings remnants in the WebGL implementation - r=bz
Yeah OK I know what this almost certainly is --- the WebGLintptr typedef was changed to a typedef to GLintptr, and likely these were not actually the same.
OK, indeed: WebGLintptr was long long which is int64 GLintptr is ptrdiff_t. Whence the bug on 32bit platforms
Again, the bug was that while most WebGL types are equal to the corresponding OpenGL type, some are different: WebGLintptr is always long long (int64) in Web IDL while it is intptr_t in OpenGL WebGLsizeiptr is the same I also changed WebGLboolean to be bool, following Web IDL. Also removed now-useless #include "WebGLContext.h" in nsDOMCI. And the #undef None there was almost certainly added there for it (X11 headers have a None macro) and affected WebGLContext.h (which has or used to have a None enum value somewhere). Removed too. Reenabling the unit test.
Attachment #671006 - Flags: review?(bzbarsky)
Comment on attachment 671006 [details] [diff] [review] fix WebGL typedefs to reflect IDL types instead of being equal to OpenGL types r=me
Attachment #671006 - Flags: review?(bzbarsky) → review+
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Somehow, the part of that patch that actually reenables the test was dropped. Landed now: http://hg.mozilla.org/integration/mozilla-inbound/rev/088dfedf36d5
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: