Bug 800657 - Fix WebGL typedefs, WebGLintptr was wrong on 32bit systems, caused index-validation.html regression - r=bz